samples/_failures_safe/1761635178_e1f4b7_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_5b45b3f9.c: In function ‘main’:
./samples/SAFE/__tmp_5b45b3f9.c:151:5: error: expected declaration or statement at end of input
  151 |     perform_dfs(&g, -1);
      |     ^~~~~~~~~~~
